classDiagram
  Region "1" *-- "six cohorts" Household
  Household --> HouseholdAllocation : monthly budget
  Region "1" *-- "many" Business
  Region "1" *-- "1" Government
  Scenario "1" --> "1" Region
  Scenario "1" --> "1" Visitor
  Visitor --> Business : category spending
  Household --> Business : local spending
  Business --> Government : taxes
